--- a/index.html
+++ b/index.html
@@ -2,28 +2,30 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon11.png" />
+		<link rel="icon" href="/traffic-analyst/favicon11.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.a297cb32.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.24a0c235.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.7a2b2d95.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.b8a72a8c.js">
+		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/entry/start.7f34cf9b.js">
+		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/index.a1ad4ba8.js">
+		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/singletons.95243986.js">
+		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/paths.66b1f63b.js">
+		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/entry/app.cc997026.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_743um3 = {
-						base: "",
+					__sveltekit_ut57oa = {
+						assets: "/traffic-analyst",
+						base: "/traffic-analyst",
 						env: {}
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.a297cb32.js"),
-						import("/_app/immutable/entry/app.b8a72a8c.js")
+						import("/traffic-analyst/_app/immutable/entry/start.7f34cf9b.js"),
+						import("/traffic-analyst/_app/immutable/entry/app.cc997026.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
