--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 		<link rel="icon" href="/traffic-analyst/favicon11.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/entry/start.39e073fd.js">
+		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/entry/start.a45f5070.js">
 		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/index.a1ad4ba8.js">
-		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/singletons.92ebcfd4.js">
-		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/paths.9c5ebfa3.js">
-		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/entry/app.0d374cce.js">
+		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/singletons.2b504cb9.js">
+		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/paths.7f77b3c6.js">
+		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/entry/app.a6c319d0.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_eun13k = {
+					__sveltekit_13entzv = {
 						assets: "/traffic-analyst",
 						base: "/traffic-analyst",
 						env: {}
@@ -24,8 +24,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/traffic-analyst/_app/immutable/entry/start.39e073fd.js"),
-						import("/traffic-analyst/_app/immutable/entry/app.0d374cce.js")
+						import("/traffic-analyst/_app/immutable/entry/start.a45f5070.js"),
+						import("/traffic-analyst/_app/immutable/entry/app.a6c319d0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
