--- a/index.html
+++ b/index.html
@@ -2,33 +2,61 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/traffic-analyst/favicon11.png" />
+		<link rel="icon" href="./favicon11.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/entry/start.BUMKi1pv.js">
-		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/entry.DUS3QpBL.js">
-		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/scheduler.C19aQTI2.js">
-		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/paths.BRNq2JAT.js">
-		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/environment.D6L2nK2c.js">
-		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/entry/app.Cu9tEjXD.js">
-		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/index.B0knyX5n.js">
+		<link href="./_app/immutable/assets/0.BcOcJDW8.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.DJW8GcNE.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/uPlot.DbNj0r-M.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/TrafficSim.DNcuzJ8C.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BUMKi1pv.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DUS3QpBL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.C19aQTI2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.BRNq2JAT.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/environment.D6L2nK2c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.ChdDYnCf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.B0knyX5n.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.B1NEX81N.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Crq4Qukw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/each.OpygIZJG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.BPu2XYXM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/uPlot.min.D9LKXES3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/PerformanceObserver.CpkuGQ3y.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/simulation2.CRWH4vD6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/TrafficSim.svelte_svelte_type_style_lang.C1bFZHyO.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/loader.6aynuUIT.js"><!-- HEAD_svelte-jt7kr5_START --><base href="./"><!-- HEAD_svelte-jt7kr5_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">
+		<div style="display: contents">   <main class="svelte-g2nepn"><div><canvas width="960" height="100" class="svelte-63pr4t"></canvas> <div style="top: 0" class="svelte-1sn663n"><canvas width="36" height="16" class="svelte-1sn663n"></canvas> </div> </div> <div style="top: 130px" class="svelte-1sn663n"><canvas width="36" height="16" class="svelte-1sn663n"></canvas> </div> <h1 class="svelte-g2nepn" data-svelte-h="svelte-1xmbjy5"><img src="title8.png" alt="AutoWaves" class="svelte-g2nepn"></h1> <div id="tools" class="svelte-g2nepn"><div class="grid"><label for="rpm">RPM <input id="rpm" value="0"></label> <label for="gear-ratio">GearRatios <input id="gear-ratio" value="0"></label> <label for="gear-speed">GearSpeed <input id="gear-speed" value=""></label> <label for="drive-ratio">DriveRatio <input id="drive-ratio" type="number" value="4"></label> <label for="wheel-diameter">WheelDiameter <input id="wheel-diameter" type="number" placeholder="cm" value="63"></label></div></div> <div id="menu" data-svelte-h="svelte-1c4abwl"><a class="button svelte-g2nepn" href="cars">cars list</a> <a class="button svelte-g2nepn" href="about">about</a></div> <div id="footer" class="svelte-g2nepn">v 0.3.0</div> <div id="articles"><div class="article svelte-1sipgtj"><h1>Cybertruck &amp; C15D</h1> <img src="images/cybertruckc15d.png"> <p class="date svelte-1sipgtj">2024-07-21</p> <!-- HTML_TAG_START --><p>Reunited for an improbable duel, the Tesla Cybertruck vs the Citroën C15D.
+Both vehicles boast cargo space large enough to transport a small hay bale or your various farming tools and can get you from point A to point B in your law abiding journey.</p>
+<p>Released to the public in 2023, the Cybertruck promised extraordinary capabilities. However, its initial tests left much to be desired, especially in terms of off-road performance, where it struggled with even basic obstacles. This shortfall led to humorous comparisons on the web with the Citroën C15D, a vehicle nearly 40 years older and ten times cheaper. Originally meant as a joke, these comparisons highlighted how a decades-old, budget-friendly vehicle could, in many ways, rival the futuristic Cybertruck in practical off-road capability.</p>
+<p>The C15D, despite its age, remains a model of durability and practicality while being exceptionally affordable. It’s no wonder you can still spot these workhorses navigating the rural roads of France.</p>
+<p>This comparison begs the question: Do you really need to spend a fortune to have fun and get the job done?</p>
+<p>Despite its flaws, the Cybertruck deserves credit for pushing the boundaries of automotive design and attempting to reinvigorate a field that has remained largely static for years. Innovation comes with risks and challenges, especially when trying to match or surpass the tried-and-true behemoths that have dominated the market for so long.</p>
+<p><a href="compare?id=tesla_cybertruck&tid=0&cid=1&id=citroen_c15d&tid=0&cid=0">Go to comparison</a></p>
+<!-- HTML_TAG_END -->  </div></div> <div class="background svelte-76eo7s"><canvas width="480" height="480" class="svelte-76eo7s"></canvas> <div style="display: none;"><div style="top: 0" class="svelte-1sn663n"><canvas width="36" height="16" class="svelte-1sn663n"></canvas> </div></div> </div> </main> 
+			
 			<script>
 				{
 					__sveltekit_1vzggm = {
-						base: "/traffic-analyst",
+						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/traffic-analyst"
 					};
 
 					const element = document.currentScript.parentElement;
 
+					const data = [null,{"type":"data","data":{articles:[{file:"cybertruckc15d.md",frontmatter:{title:"Cybertruck & C15D",author:"Enzuo",date:"2024-07-21",image:"cybertruckc15d.png"},content:"\u003Cp>Reunited for an improbable duel, the Tesla Cybertruck vs the Citroën C15D.\nBoth vehicles boast cargo space large enough to transport a small hay bale or your various farming tools and can get you from point A to point B in your law abiding journey.\u003C/p>\n\u003Cp>Released to the public in 2023, the Cybertruck promised extraordinary capabilities. However, its initial tests left much to be desired, especially in terms of off-road performance, where it struggled with even basic obstacles. This shortfall led to humorous comparisons on the web with the Citroën C15D, a vehicle nearly 40 years older and ten times cheaper. Originally meant as a joke, these comparisons highlighted how a decades-old, budget-friendly vehicle could, in many ways, rival the futuristic Cybertruck in practical off-road capability.\u003C/p>\n\u003Cp>The C15D, despite its age, remains a model of durability and practicality while being exceptionally affordable. It’s no wonder you can still spot these workhorses navigating the rural roads of France.\u003C/p>\n\u003Cp>This comparison begs the question: Do you really need to spend a fortune to have fun and get the job done?\u003C/p>\n\u003Cp>Despite its flaws, the Cybertruck deserves credit for pushing the boundaries of automotive design and attempting to reinvigorate a field that has remained largely static for years. Innovation comes with risks and challenges, especially when trying to match or surpass the tried-and-true behemoths that have dominated the market for so long.\u003C/p>\n\u003Cp>\u003Ca href=\"compare?id=tesla_cybertruck&tid=0&cid=1&id=citroen_c15d&tid=0&cid=0\">Go to comparison\u003C/a>\u003C/p>\n"}]},"uses":{}}];
+
 					Promise.all([
-						import("/traffic-analyst/_app/immutable/entry/start.BUMKi1pv.js"),
-						import("/traffic-analyst/_app/immutable/entry/app.Cu9tEjXD.js")
+						import("./_app/immutable/entry/start.BUMKi1pv.js"),
+						import("./_app/immutable/entry/app.ChdDYnCf.js")
 					]).then(([kit, app]) => {
-						kit.start(app, element);
+						kit.start(app, element, {
+							node_ids: [0, 2],
+							data,
+							form: null,
+							error: null
+						});
 					});
 				}
 			</script>
