--- a/404.html
+++ b/404.html
@@ -3,21 +3,21 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/traffic-analyst/favicon11.png" />
-		<meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
-		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/entry/start.BUMKi1pv.js">
-		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/entry.DUS3QpBL.js">
+		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/entry/start.kubMmyNl.js">
+		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/entry.Cn-Yts-A.js">
 		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/scheduler.C19aQTI2.js">
-		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/paths.BRNq2JAT.js">
-		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/environment.D6L2nK2c.js">
-		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/entry/app.ChdDYnCf.js">
+		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/paths.l1P9fjZU.js">
+		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/environment.DcgoGIOT.js">
+		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/entry/app.B_z08yqi.js">
 		<link rel="modulepreload" href="/traffic-analyst/_app/immutable/chunks/index.B0knyX5n.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1vzggm = {
+					__sveltekit_1vzkep = {
 						base: "/traffic-analyst",
 						assets: "/traffic-analyst"
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/traffic-analyst/_app/immutable/entry/start.BUMKi1pv.js"),
-						import("/traffic-analyst/_app/immutable/entry/app.ChdDYnCf.js")
+						import("/traffic-analyst/_app/immutable/entry/start.kubMmyNl.js"),
+						import("/traffic-analyst/_app/immutable/entry/app.B_z08yqi.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
