--- a/compare.html
+++ b/compare.html
@@ -3,29 +3,29 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="./favicon11.png" />
-		<meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
-		<link href="./_app/immutable/assets/0.BcOcJDW8.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.DnL7aWvJ.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/5.CONkpiSE.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/uPlot.DbNj0r-M.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/UPlotTorque.MNaGwfSd.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BUMKi1pv.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DUS3QpBL.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.kubMmyNl.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Cn-Yts-A.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.C19aQTI2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.BRNq2JAT.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/environment.D6L2nK2c.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.ChdDYnCf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.l1P9fjZU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/environment.DcgoGIOT.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B_z08yqi.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B0knyX5n.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B1NEX81N.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.CnUqCYo7.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CYzIcfs9.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.BHmk67fJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.OpygIZJG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BmoigovH.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/UPlotRealtime.D_Ew3F7X.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/uPlot.min.D9LKXES3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.BPu2XYXM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/UPlotTorque.CQ6pp_oC.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/loader.6aynuUIT.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CarEntity3D.KPdg1nMm.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DS0r9Tqs.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/UPlotRealtime.qV2_dZlo.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/uPlot.min.Sk6Afor8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.JSGz7vAS.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/UPlotTorque.B0gn389L.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/loader.CaIUhdO0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CarEntity3D.DIBYzGMn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/simulation2.CRWH4vD6.js"><!-- HEAD_svelte-jt7kr5_START --><base href="./"><!-- HEAD_svelte-jt7kr5_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -33,7 +33,7 @@
 			
 			<script>
 				{
-					__sveltekit_1vzggm = {
+					__sveltekit_1vzkep = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/traffic-analyst"
 					};
@@ -43,8 +43,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BUMKi1pv.js"),
-						import("./_app/immutable/entry/app.ChdDYnCf.js")
+						import("./_app/immutable/entry/start.kubMmyNl.js"),
+						import("./_app/immutable/entry/app.B_z08yqi.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
